<resources>
    <string name="Gen_Gen_lbl_app_name">StayAtHome</string>
    <string name="font_default">@string/font_regular</string>
    <string name="font_light">Avenir-Regular.ttf</string>
    <string name="font_Avenir_semi_final">Avenir-Regular.ttf</string>
    <string name="font_avenir_bold">Avenir-Regular.ttf</string>
    <string name="font_regular">Avenir-Regular.ttf</string>
    <string name="font_semi_bold">Avenir-Regular.ttf</string>
    <string name="font_light_separate">Avenir-Regular.ttf</string>
    <string name="font_avenir_heavy">Avenir-Regular.ttf</string>
    <string name="font_notification">AvenirLTStd-Light.otf</string>
    <string name="font_notification_bold">AvenirLTStd-Roman.otf</string>
    <string name="font_bold">Avenir-Heavy.ttf</string>
    <string name="Gen_Gen_lbl_version_app">Version </string>
    <string name="ApDr_ApDr_lbl_open_drawer">Open drawer</string>
    <string name="ApDr_Gen_lbl_close_drawer">Close drawer</string>
    <string name="Gen_Gen_lbl_calendar">Calendar</string>
    <string name="Trp_MyTr_lbl_my_trips">My Trips</string>
    <string name="ApDr_ApDr_SBtn_my_trips_drawer">My Trips <![CDATA[<b><font color=#FF0000> (Beta) </font></b>]]></string>
    <string name="Trp_MyTr_lbl_trips">Mishwar</string>
    <string name="ApDr_ApDr_SBtn_zones">My Zone</string>
    <string name="ApDr_ApDr_SBtn_guidance">Road Assistance</string>
    <string name="ApDr_ApDr_SBtn_assistance">Assistance</string>
    <string name="ApDr_ApDr_SBmsg_invite">please select at least one vehicle</string>
    <string name="Gen_Gen_lbl_settings">Settings</string>
    <string name="HHD_Gen_lbl_dashboard_title">Dashboard</string>
    <string name="ApDr_ApDr_SBtn_logout">LogOut</string>
    <string name="ApDr_ApDr_SBtn_drawer_about">About us</string>
    <string name="Gen_Gen_lbl_menu_edit">Edit</string>
    <string name="Gen_Gen_lbl_ok">Ok</string>
    <string name="Gen_Gen_lbl_ok_wifi">Go Wifi Setting</string>
    <string name="Gen_Gen_lbl_cancel">Cancel</string>
    <string name="HHDH_Gen_lbl_user_role_householder">Householder</string>
    <string name="LMT_Gen_lbl_fab_zone">Zones</string>
    <string name="LMT_Gen_lbl_fab_satellite">Satellite</string>
    <string name="LMT_Gen_lbl_fab_traffic">Traffic</string>
    <string name="Gen_Gen_lbl_done">Done</string>
    <string name="Pay_Gen_lbl_pay">Pay</string>
    <string-array name="Gen_Gen_lbl_image_picker">
        <item>Open Camera</item>
        <item>Photo Library</item>
    </string-array>
    <string-array name="Gen_Gen_lbl_image_picker_extended">
        <item>Open Camera</item>
        <item>Photo Library</item>
        <item>Remove Photo</item>
    </string-array>
    <string name="Gen_Gen_lbl_all_fields_required">All fields are required.</string>
    <string name="SgIn_SgIn_lbl_server_url_dialog_hint">http://myurl.com</string>
    <string name="SgIn_SgIn_lbl_server_signal_r_url_dialog_hint">http://signaRurl.com</string>
    <string name="SgIn_SgIn_lbl_server_url_dialog_title">Enter URL</string>
    <string name="SgIn_SgIn_lbl_not_registered">Not Registered?</string>
    <string name="reset_enter_code">Email</string>
    <string name="Gen_Gen_Iptxt_hint_confirm_password">Confirm Password</string>
    <string name="SgIn_SgIn_lbl_invalid_lenght_phone_number">Phone number is invalid</string>
    <string name="SgIn_SgIn_lbl_empty_phone_number">Please enter a valid phone number</string>
    <string name="device_serial_error">You need to enter a serial number</string>
    <string name="Dev_AdDev_lbl_device_name_caps">Device Name</string>
    <string name="Dev_DevLst_lbl_title_select_device">Select Device</string>
    <string name="Dev_AdDev_title_add_device">Add Device</string>
    <string name="Dev_AdDev_lbl_device">Device</string>
    <string name="Dev_AdDev_lbl_device_activation_code_caps">Activation Code</string>
    <string name="Usr_Gen_lbl_device_hint_serial_number">Serial Number</string>
    <string name="Dev_DevLst_lbl_device_hint_activation_code">Activation Code</string>
    <string name="Dev_DevLst_lbl_device_vehicles">Vehicles</string>
    <string name="Dev_DevLst_lbl_device_delete">Device(s) deleted</string>
    <string name="Veh_VehLst_lbl_vehicle_delete">Vehicle(s) deleted</string>
    <string name="Trp_MyTr_lbl_trip_delete">Trip(s) deleted</string>
    <string name="Gen_Gen_lbl_delete_content">Sure you want to delete?</string>
    <string name="Dev_AdDev_lbl_device_default_name">Device No. 1 </string>
    <string name="Zon_ZonLst_lbl_zones_title">ZONES</string>
    <string name="Zon_ZonLst_lbl_radius_format" formatted="false">%s m</string>
    <string name="Zon_ZonLst_lbl_times_format" formatted="false">%s to %s</string>
    <string name="Zon_ZonMap_lbl_add_zone_title">Add Zone</string>
    <string name="Zon_ZonMap_lbl_add_zone_name">Add Zone Name</string>
    <string name="Zon_ZonDt_lbl_add_zone_title">Add Zone</string>
    <string name="Zon_Gen_lbl_zone_radius">Radius</string>
    <string name="Zon_AdZon_Iptxt_zone_type_address">Type Address</string>
    <string name="Zon_ZonDt_lbl_zone_meter_m">M</string>
    <string name="Zon_AdZon_lbl_default_radius_zone">150</string>
    <string name="Zon_ZonDt_lbl_hour_minute_format" formatted="false">%02d:%02d</string>
    <string name="Zon_ZonDt_lbl_zone_notify_in">Notify me on Entry</string>
    <string name="Zon_ZonDt_lbl_zone_notify_out">Notify me on Exit</string>
    <string name="Zon_ZonDt_lbl_zone_edit_from">From</string>
    <string name="Zon_ZonDt_lbl_zone_edit_to">To</string>
    <string name="Zon_ZonDt_lbl_zone_edit_times">Time</string>
    <string name="Zon_ZonDt_lbl_zone_error_no_address">Address not found</string>
    <string name="Zon_ZonMap_lbl_zone_fetching_address">Fetching address</string>
    <string name="Zon_AdTr_lbl_zone_fetching_address">Fetching address</string>
    <string name="Zon_RdeDh_lbl_zone_fetching_address">Fetching address</string>
    <string name="Zon_ZonMap_lbl_zone_details_title">ZONE DETAILS</string>
    <string name="Zon_ZonDt_lbl_zone_time_am">AM</string>
    <string name="Zon_ZonDt_lbl_zone_time_pm">PM</string>
    <string name="Zon_ZonDt_lbl_zone_am">a</string>
    <string name="Zon_ZonDt_lbl_zone_pm">a</string>
    <string name="Zon_Gen_lbl_cancel_zone">Cancel</string>
    <string name="Zon_ZonDt_lbl_zone_select_time">Specify Time</string>
    <string name="Gen_Gen_lbl_no_records_found">No Records Found</string>
    <string name="Drv_DrvDh_lbl_no_calendar_event">No Calendar Event</string>
    <string name="Usr_AdUsr_Iptxt_invite_hint_email">Email</string>
    <string name="Gen_Gen_hint_phone_number">Phone Number</string>
    <string name="Usr_AdUsr_lbl_invite_menu_invite">Invite</string>
    <string name="Usr_AdUsr_Iptxt_invite_hint_name">Name</string>
    <string name="Usr_AdUsr_lbl_invite_sent">Your invitation has been sent</string>
    <string name="Drv_DrvPrf_lbl_license_number" formatted="false">License Number: %s</string>
    <string name="Usr_AdUsr_lbl_add_user_success">User added successfully</string>
    <string name="Drv_DrvLst_lbl_select_driver_title">Select Driver</string>
    <string name="ApI_ContUs_Iptxt_contact_name">Name (Optional)</string>
    <string name="ApI_ContUs_Iptxt_contact_message">Write Message</string>
    <string name="ApI_ContUs_SBtn_contact_send">Submit</string>
    <string name="ApI_ContUs_lbl_contact_type">Contact Type</string>
    <string name="ApI_ContUs_lbl_contact_us_sent">Thank you for reaching out! our team will be contacting you shortly</string>
    <string name="ApI_ContUs_lbl_contact_us_required_message">Message is required</string>
    <string name="Gen_FavLst_lbl_favorites_title">Favorites</string>
    <string name="Gen_PlcSrch_lbl_favorites_title">Favorites</string>
    <string name="Gen_PlcSrch_lbl_palce_hint">Search</string>
    <string name="Zon_AdTr_lbl_favorites_add_to_favorites_title">Add to favorites</string>
    <string name="Zon_Adtr_lbl_add_favorites_address_message">Would you like to add this location to favorites?</string>
    <string name="Gen_PlcSrch_lbl_favorite_delete">Favorite(s) Deleted</string>
    <string name="Gen_FavLst_lbl_favorite_delete">Favorite(s) Deleted</string>
    <string name="Zon_ZonMap_lbl_favourite_success_text">Favorite added successfully</string>
    <string name="Zon_ZonMap_lbl_favourite_success_title">Done Successfully</string>
    <string name="Zon_ZonMap_lbl_favourtie_name">Favorite</string>
    <string name="Gen_Gen_Iptxt_enter_name">Enter Name</string>
    <string name="Gen_Gen_lbl_not_available">Not Available</string>
    <string name="Gen_Gen_lbl_please_wait">Please Wait</string>
    <string name="Veh_VehPrf_lbl_profile_licence">License Number: </string>
    <string name="Usr_UsrPrf_lbl_profile_contact_info">Contact Info</string>
    <string name="Veh_RdeDahHH_lbl_profile_on_vehicle">No Vehicles Found</string>
    <string name="Veh_VehPrf_lbl_profile_on_document">No Documents Found</string>
    <string name="User_UserPrf_lbl_profile_title_speed_limit">Speed Limit</string>
    <string name="Veh_Evt_lbl_vehicle_title_view">Vehicle</string>
    <string name="Veh_AdVeh_Iptxt_vehicle_add_name">Nickname</string>
    <string name="Veh_AdVeh_Iptxt_vehicle_add_model">Model</string>
    <string name="Veh_AdVeh_Iptxt_vehicle_add_year">Make Year</string>
    <string name="Veh_AdVeh_Iptxt_vehicle_add_reg_number">Registration Number</string>
    <string name="Veh_AdVeh_Iptxt_vehicle_add_device">Add Device</string>
    <string name="Veh_AdVeh_Iptxt_vehicle_add_driver">Add Driver</string>
    <string name="Gen_Gen_lbl_yes">Yes</string>
    <string name="Gen_Gen_lbl_no">No</string>
    <string name="Gen_Gen_lbl_save">Save</string>
    <string name="Gen_Gen_lbl_invite_carlist">Share Car</string>
    <string name="Veh_DocMod_lbl_document_name">Document Name</string>
    <string name="Gen_Gen_lbl_invite_user">Family/Friend/Relative</string>
    <string name="Gen_Gen_lbl_invite_private_user">Private Driver</string>
    <string name="Veh_DocMod_lbl_document_expiry">Expiry Date</string>
    <string name="Veh_DocMod_lbl_document_description">Description</string>
    <string name="SgIn_Land_SBtn_sign_in">Sign In/Up</string>
    <string name="Gen_Land_lbl_terms_message">By Signing Up/In, You read and agree to motorna</string>
    <string name="Gen_Land_lbl_terms2_message"> <u>Terms and Conditions</u> and the</string>
    <string name="Gen_Land_lbl_warranty_message"> <u>Warranty and Refund Policies.</u></string>
    <string name="face_id_reg">FingerPrint registration</string>
    <string name="HHD_HHDh_first_sign_up_start_button">Start</string>
    <string name="HHD_HHDh_first_sign_up_content">Welcome to the STAY HOME application launched by the company to ensure your safety and health from COVID-19 VIRUS.</string>
    <string name="HHD_HHDh_first_sign_up_content_two">Please start the Sign Up Process which will include adding your home location and FingerPrint to the application.</string>
    <string name="instructions_heath">As per as the instructions of company policy,\n during the quarantine period</string>
    <string name="stay_home">Please Stay home and be safe.</string>
    <string name="stay_at_home">1. Stay at home</string>
    <string name="keep_phone">2. Keep your Phone ON and had enough battery all the time</string>
    <string name="keep_stay_home">3. Keep STAYHOME application working</string>
    <string name="keep_gps">4. Keep your GPS, Wifi and Bluetooth activated</string>
    <string name="agreed">Agreed</string>
    <string name="success_signed_up">You are successfully Signed Up. </string>
    <string name="todays">Today\'s tip</string>
    <string name="self_quarantaine_title">\"Self-quarantaine, what is it?\"</string>
    <string name="self_quarantaine_desc">Stay in a separate room from your family and use a separate bathroom if available.\n \nAlways wear a face mask if you must be around other people.</string>
    <string name="days_left">DAYS LEFT \n IN QUARANTAINE </string>
</resources>