<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="locale"
    android:orientation="vertical"
    tools:context=".activities.FaceRegistrationActivity">

    <include
        layout="@layout/layout_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:id="@+id/layout_register_face"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        tools:visibility="visible"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_step"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="25dp"
            android:layout_marginStart="25dp"
            android:layout_marginBottom="10dp"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/circle_step2"
            />

        <ImageView
            android:id="@+id/place_holder"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_above="@+id/txt_fingerinfo"
            android:layout_centerHorizontal="true"
            android:src="@drawable/finger_print"
           />

        <com.machinestalk.stayhome.components.TextView
            android:id="@+id/txt_fingerinfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:elevation="4dp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:text="@string/face_id_reg"
             />
    </RelativeLayout>


    <LinearLayout
        android:id="@+id/layout_permission"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:visibility="visible"
        android:layoutDirection="locale"
        android:background="@color/white"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/circle_step3" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/view_first_sign_up_logo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            app:srcCompat="@drawable/ic_stay_home" />


        <com.machinestalk.stayhome.components.TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:lines="2"
            android:maxLines="2"
            android:minLines="2"
            android:gravity="center"
            android:text="@string/instructions_heath"
            android:textColor="@color/black"
            android:textSize="15sp" />


        <com.machinestalk.stayhome.components.TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:text="@string/stay_at_home"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:font_path_from_assets="@string/font_bold" />

        <com.machinestalk.stayhome.components.TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="20dp"
            android:text="@string/keep_phone"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:font_path_from_assets="@string/font_bold" />

        <com.machinestalk.stayhome.components.TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="20dp"
            android:text="@string/keep_stay_home"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:font_path_from_assets="@string/font_bold" />

        <com.machinestalk.stayhome.components.TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="20dp"
            android:text="@string/keep_gps"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:font_path_from_assets="@string/font_bold" />

        <com.machinestalk.stayhome.components.Button
            android:id="@+id/bt_agreed"
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:textSize="15sp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:background="@drawable/bg_btn"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/agreed"
            android:textAllCaps="false"
            android:textColor="@color/white" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/layout_success"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        tools:visibility="gone">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/big_green_check" />

            <com.machinestalk.stayhome.components.TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/success_signed_up"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:font_path_from_assets="@string/font_bold" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                app:srcCompat="@drawable/stay_home" />

            <com.machinestalk.stayhome.components.TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/stay_home"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:font_path_from_assets="@string/font_bold" />

        </LinearLayout>
    </RelativeLayout>
    <TextView
        android:id="@+id/no_permission"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="50dp"
        android:text="No Camera permission granted."
        android:textSize="20sp"
        android:visibility="gone"
        tools:visibility="gone"/>
</LinearLayout>