<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="100">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="50"
                android:background="#2ECDA2"
                android:orientation="vertical"
                android:weightSum="3">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:orientation="vertical">

                    <com.machinestalk.android.components.ImageView
                        android:id="@+id/remaining_day_img"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp" />

                    <com.machinestalk.stayhome.components.TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="20dp"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/days_left"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="24sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <com.machinestalk.android.components.ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_alignParentBottom="true"
                            android:layout_centerHorizontal="true"
                            android:src="@drawable/home_illsutration1" />
                    </RelativeLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="50"
                android:orientation="vertical">

                <com.machinestalk.stayhome.components.TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/todays"
                    android:textColor="#00D48C"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    app:font_path_from_assets="@string/font_semi_bold" />

                <View
                    android:layout_width="50dp"
                    android:layout_height="5dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:background="#00D48C" />

                <com.machinestalk.stayhome.components.TextView
                    android:id="@+id/title_quarantine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:gravity="center"
                    android:text="@string/self_quarantaine_title"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:font_path_from_assets="@string/font_bold" />

                <com.machinestalk.stayhome.components.TextView
                    android:id="@+id/desc_quarantine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:lineSpacingExtra="4dp"
                    android:text="@string/self_quarantaine_desc"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    app:font_path_from_assets="@string/font_light" />
            </LinearLayout>
        </LinearLayout>


        <include
            android:id="@+id/view_fragment_home_progress"
            layout="@layout/layout_progress"
            android:visibility="gone" />

    </RelativeLayout>


</androidx.core.widget.NestedScrollView>