<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/view_first_sign_up_logo"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        app:srcCompat="@drawable/ic_stay_home" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <com.machinestalk.stayhome.components.TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:lineSpacingExtra="6dp"
            android:gravity="center"
            android:text="@string/HHD_HHDh_first_sign_up_content"
            android:textColor="@color/black"
            android:textSize="15sp" />


        <View
            android:layout_width="220dp"
            android:layout_height="1dp"
            android:layout_marginTop="30dp"
            android:background="@color/grayDashboard" />


        <com.machinestalk.stayhome.components.TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="60dp"
            android:lineSpacingExtra="6dp"
            android:gravity="center"
            android:text="@string/HHD_HHDh_first_sign_up_content_two"
            android:textColor="@color/black"
            android:textSize="14sp" />

    </LinearLayout>


    <com.machinestalk.stayhome.components.Button
        android:id="@+id/view_first_sign_up_save_button"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:textSize="16sp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:background="@drawable/shape_green_button_bg"
        android:text="@string/HHD_HHDh_first_sign_up_start_button"
        android:textAllCaps="false"
        android:textColor="@color/white" />


</RelativeLayout>